# researchKit

./: .gitignore  LICENSE  OLLAMA_AGENT_DELIVERABLES.md  OLLAMA_AGENT_SPEC.md  OLLAMA_CONVERSATIONAL_REDESIGN_PLAN.md  README.md  pyproject.toml
docs/: ollama-agent-guide.md
scripts/bash/: common.sh  execute.sh  plan.sh  synthesize.sh
src/ollama_agent/: __init__.py  cli.py  config.py  conversation.py  environment.py  ollama_client.py  workflow.py
src/ollama_agent/prompts/: __init__.py  constitution.py  execute.py  plan.py  synthesize.py
src/ollama_agent/tools/: __init__.py  pdf_parser.py  url_fetch.py  web_search.py
src/research_cli/: __init__.py
tests/: README.md  __init__.py
tests/ollama_agent/: __init__.py  test_config.py  test_ollama_client.py  test_tools.py
