[project]
name = "research-cli"
version = "0.1.1"
description = "A CLI tool for structured research workflows with AI integration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ResearchKit Contributors" }
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx[socks]>=0.27.0",
    "platformdirs>=4.0.0",
    "readchar>=4.0.0",
    # Ollama agent dependencies
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pypdf>=3.17.0",
    "duckduckgo-search>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
research = "research_cli:main"
research-ollama = "ollama_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_cli", "src/ollama_agent"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "share/research-cli/templates"
"claude_commands" = "share/research-cli/claude_commands"
"scripts" = "share/research-cli/scripts"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "templates/",
    "claude_commands/",
    "scripts/",
]
